<resources>
    <string name="app_name">datavis</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Misc -->
    <string name="antenna">Antenna</string>
    <string name="metaData">Metadata</string>
    <string name="metaDataIndicator">Metadata Imported</string>
    <string name="farFieldSource">Farfield Source</string>

    <!-- Main -->
    <string name="introduction">Visualize antennas and electric fields in AR.</string>
    <string name="howToinstructions">Click on the question mark to receive app instructions.</string>
    <string name="howtoAr">Click on one of the items to start the visualization. If there are none, click Import.</string>
    <string name="import_btn">Import</string>
    <string name="delete_btn">Manage</string>

    <!-- AR Activity -->
    <string name="HHPBW_deg">HPBW: %1$s°</string>
    <string name="VHPBW_deg">VHPBW: %1$s° </string>
    <string name="Directivity_dBi">Directivity: %1$s dBi</string>
    <string name="label_frequency">Frequency: %.2f GHz</string>
    <string name="label_tilt">Tilt: %.2f°</string>
    <string name="back_arrow">Back</string>
    <string name="settings_icon">Settings</string>
    <string name="logView">Log View</string>
    <string name="linearView">Linear View</string>
    <string name="ar_hint">Move your phone until a surface is detected\nThen tap on the surface\nto place your selected antenna</string>
    <string name="toastFFSempty">No ffs data to display!</string>
    <string name="toast404Antenna">File not found</string>
    <string name="toastDefaultAntenna"> -> Using default Antenna</string>
    <string name="toast404Coordinates">Unable to load the coordinates from the database.</string>
    <string name="toast404Field">Antenna field not found</string>
    <string name="toastFreqTiltMismatch">No data for this frequency/tilt combination found</string>
    <string name="toastCorruptAntenna">Corrupt .glb file found - using default Antenna</string>

    <!-- BottomSheet -->
    <string name="frequency">Frequency:</string>
    <string name="tilt">Tilt:</string>
    <string name="meta_NF">[NF]</string>
    <string name="Nullfill_dB">Nullfill: %1$s dB</string>
    <string name="Squint_deg">Squint: %1$s°</string>
    <string name="Tilt_deg">Tilt Real: %1$s°</string>
    <string name="TiltDeviation_deg">Tilt Deviation: %1$s°</string>
    <string name="Phi_max">Phi_max: %1$s°</string>
    <string name="Theta_max">Theta_max: %1$s°</string>
    <string name="Total_power_30deg">F/B Ratio 30°: %1$s</string>

    <!-- MainMenu -->
    <string name="instructions">Instructions</string>
    <string name="import_instructions">Import Instructions</string>
    <string name="app_instructions">App Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="action_import">Import</string>

    <!-- Import -->
    <string name="btn_add_default">Use Default Antenna</string>
    <string name="btn_add_new_antenna">Import Antenna</string>
    <string name="btn_add_metaData">Add Metadata</string>
    <string name="btn_add_metaFolder">Import Folder</string>
    <string name="btn_add_ffs">Add FFS</string>
    <string name="btn_confirm">Confirm</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="log">Log</string>
    <string name="linear">Linear</string>
    <string name="toastInvalidAntenna">Not a valid Antenna!</string>
    <string name="toastInvalidFFS">Not a valid .ffs File!</string>
    <string name="toastInvalidMetadata">Not a valid .csv Metadata file!</string>
    <string name="toastValidMetadata">Metadata File imported</string>
    <string name="toastValidMetadataFolder">Metadata Folder imported</string>
    <string name="toastRedundantMetadata">Metadata already read!</string>
    <string name="toastFolderImport">Folder import running!</string>
    <string name="toastFolderImportDone">Folder import all done!</string>
    <string name="unsavedChangesWarning">You have unsaved changes. Do you want to exit?</string>


    <!-- Instructions -->
    <string name="app_instructions_text_1">Press the Import Button to Import new Antennas and FarFieldSource Data to visualize in AR.</string>

    <string name="app_instructions_text">All Imported Antennas will be shown with 3 buttons.</string>
    <string name="app_instructions_text_eye">Press the Eye to visualize the Antenna in AR.</string>
    <string name="app_instructions_text_pen">Press the Pencil to edit the Antenna Data.</string>
    <string name="app_instructions_text_cross">Press the red X, to delete the Antenna.</string>

    <string name="import_instructions_text_default_antenna">Click to assign the default Antenna Model</string>
    <string name="import_instructions_text_import_antenna">Click to Import a Antenna Model.
        \nThe Antenna Model needs to be a .glb or .gltf File</string>
    <string name="import_instructions_text_import_folder">Click to Import a Folder with all relevant Data.
        \nAntennafields need to be a .ffs File.
        \nMetadata needs to be a .csv File.</string>
    <string name="import_instructions_text_confirm">Click to Confirm the Import of the selected Import folder.
        \nDepending on the Data Size, this may take a while. </string>


    <!-- about -->
    <string name="about">About</string>
    <string name="datavis">datavis</string>
    <string name="about_text">AR-App for data visualisation\nof antenna signals\n\nProject within the scope of the module\nSoftware Engineering Practice\nin collaboration with Ericsson\n\nBy Tassilo Heinemann, Dominik Kauth, Samuel Kern, Stefan Rybinski, Leopold Straub\n\n</string>
    <string name="Google_privacy_1">This application runs on Google Play Services for AR (ARCore),</string>
    <string name="Google_privacy_2">which is provided by Google and governed by the Google Privacy Policy</string>
    <string name="Google_privacy_links">\nLinks:\nhttps://play.google.com/store/apps/details?id=com.google.ar.core \n\n https://policies.google.com/privacy</string>


    <!-- Settings -->
    <string name="tab_antenna">Antenna</string>
    <string name="tab_ffs">Fields</string>
    <string name="tab_metadata">Metadata</string>
    <string name="clear_all_confirm">Clear Database?</string>
    <string name="clear_one_confirm">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="manage">Manage</string>

</resources>