<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainFragment"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/configName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/HeadLine"
            android:text="      " />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <Button
            android:id="@+id/btn_add_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_default"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_import_antenna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_new_antenna"
            android:textColor="@color/white"
            android:layout_weight="1"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_import_headLine_antenna"
        style="@style/HeadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/antenna" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/btn_import_Folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_add_metaFolder"
            android:textColor="@color/white"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/farFieldSource"
        style="@style/HeadLine"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollable_ffs"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:fillViewport="true">

        <ListView
            android:id="@+id/lv_import_antenna_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_metadataHeadLine"
        style="@style/HeadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metaData" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollable_meta"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:fillViewport="true">

        <ListView
            android:id="@+id/lv_import_meta_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        android:layout_marginHorizontal="100dp"/>

</LinearLayout>