<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mode"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"/>

        <Switch
            android:id="@+id/switchMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/button"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

        <Button
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apply_changes"
            android:textAlignment="center" />

    </LinearLayout>



</LinearLayout>